# tmesh

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  TODO.md
share/cmake/: compiler_flags.cmake  directories.cmake
share/files/: comment_test.para  example.para  simple.para  size_function.para  square.para
share/python/: performance.py  plot_boundary.py  plot_mesh.py  plot_qtree.py  spiral.py
src/lcthw/: CMakeLists.txt
src/lcthw/include/lcthw/: bstrlib.h  darray.h  darray_algos.h  hashmap.h  list.h  list_algos.h  minunit.h  txtio.h
src/lcthw/src/: bstrlib.c  darray.c  darray_algos.c  list.c  list_algos.c  txtio.c
src/lcthw/test/: bstrlib_tests.c  bstrlib_tests.h  darray_algos_tests.c  darray_algos_tests.h  darray_tests.c  darray_tests.h  list_algos_tests.c  list_algos_tests.h  list_tests.c  list_tests.h  txtio_tests.c  txtio_tests.h  unit_tests.c
src/lcthw/test/data/: filio_test.txt
src/tmesh/: CMakeLists.txt
src/tmesh/include/tmesh/: dbg.h  minunit.h  tinyexpr.h  tmBdry.h  tmEdge.h  tmFront.h  tmList.h  tmMesh.h  tmNode.h  tmParam.h  tmQtree.h  tmQuad.h  tmTri.h  tmTypedefs.h
src/tmesh/src/: bstrlib.c  main.c  tinyexpr.c  tmBdry.c  tmEdge.c  tmFront.c  tmList.c  tmMesh.c  tmNode.c  tmParam.c  tmQtree.c  tmQuad.c  tmTri.c
src/tmesh/test/: geom_tests.c  geom_tests.h  tmList_tests.c  tmList_tests.h  tmParam_tests.c  tmParam_tests.h  tmesh_cylinder.c  tmesh_cylinder.h  tmesh_examples.c  tmesh_examples.h  tmesh_tests.c  tmesh_tests.h  unit_tests.c
src/trimesh/: CMakeLists.txt
src/trimesh/include/trimesh/: tmBdry.h  tmEdge.h  tmFront.h  tmMesh.h  tmNode.h  tmQtree.h  tmTri.h  tmTypedefs.h
src/trimesh/src/: tmBdry.c  tmEdge.c  tmFront.c  tmMesh.c  tmNode.c  tmQtree.c  tmTri.c
src/trimesh/test/: geom_tests.c  trimesh_tests.c  trimesh_tests.h  unit_tests.c
